Fixing table layout issue in Safari.

--- a/frontend/styles/site.less
+++ b/frontend/styles/site.less
@@ -747,12 +747,14 @@ Login page
 Table
 */
 
-table#service-status {
+table {
  	width: 97.25%;
 	text-align: left;
 	background-color: #fff;
 	border-collapse: collapse;
 	margin: 0;
+	-webkit-transform: translate(-50%, 0);
+	-moz-transform: translate(-50%, 0);
 	transform: translate(-50%, 0);
 	margin-left: 50%;
 	tr {
